--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ python:
 install:
 - pip install -r requirements-travis.txt
 script:
+- python manage.py makemigrations
+- python manage.py migrate
 - python manage.py test
 deploy:
   provider: heroku
